# crewAI_proj

./: README.md  pyproject.toml
src/prod_writer/: crew.py  main.py
src/prod_writer/config/: agents.yaml  tasks.yaml
