[project]
name = "prod_writer"
version = "0.1.0"
description = "prod_writer using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.76.9,<1.0.0"
]

[project.scripts]
prod_writer = "prod_writer.main:run"
run_crew = "prod_writer.main:run"
train = "prod_writer.main:train"
replay = "prod_writer.main:replay"
test = "prod_writer.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
